results/SVCOMP/conversational/log-boolean1-2024_03_08_20_18_54.txt
import java.util.Random;

class boolean1 {

    //@ ensures \result ==> my_boolean == true || my_boolean == false;
    //@ ensures !\result ==> !(my_boolean == true) && !(my_boolean == false);
    public static boolean fun() {
        boolean my_boolean = new Random().nextBoolean();
        // Boolean shall be either true or false.
        if (my_boolean == true) return true;
        if (my_boolean == false) return true;

        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean1.java:5: error: cannot find symbol
    //@ ensures \result ==> my_boolean == true || my_boolean == false;
                            ^
  symbol:   variable my_boolean
  location: class boolean1
/home/max/Documents/JMLGPT/tmp/boolean1.java:5: error: cannot find symbol
    //@ ensures \result ==> my_boolean == true || my_boolean == false;
                                                  ^
  symbol:   variable my_boolean
  location: class boolean1
/home/max/Documents/JMLGPT/tmp/boolean1.java:6: error: cannot find symbol
    //@ ensures !\result ==> !(my_boolean == true) && !(my_boolean == false);
                               ^
  symbol:   variable my_boolean
  location: class boolean1
/home/max/Documents/JMLGPT/tmp/boolean1.java:6: error: cannot find symbol
    //@ ensures !\result ==> !(my_boolean == true) && !(my_boolean == false);
                                                        ^
  symbol:   variable my_boolean
  location: class boolean1
4 errors

import java.util.Random;

class boolean1 {

    //@ ensures \result ==> \result == true || \result == false;
    //@ ensures !\result ==> \result != true && \result != false;
    public static boolean fun() {
        boolean my_boolean = new Random().nextBoolean();
        // Boolean shall be either true or false.
        if (my_boolean == true) return true;
        if (my_boolean == false) return true;

        return false;
    }
}

